--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.5.2",
+  "version": "1.5.3-dev.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -121,12 +121,13 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest"
   },
   "dependencies": {
-    "@project-chip/matter-node.js": "0.9.4",
+    "@project-chip/matter.js": "0.10.0",
+    "@project-chip/matter-node.js": "0.10.0",
     "archiver": "7.0.1",
     "express": "4.19.2",
     "glob": "^11.0.0",
     "https": "1.0.0",
-    "matter-history": "1.1.7",
+    "matter-history": "1.1.8-dev.1",
     "node-ansi-logger": "3.0.0",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.0"
@@ -141,7 +142,7 @@
     "@types/ws": "8.5.12",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-jest": "28.8.0",
+    "eslint-plugin-jest": "28.8.1",
     "eslint-plugin-prettier": "5.2.1",
     "jest": "29.7.0",
     "prettier": "3.3.3",
