--- a/src/mock/plugin3/package.json
+++ b/src/mock/plugin3/package.json
@@ -6,5 +6,8 @@
   "license": "Apache-2.0",
   "type": "module",
   "main": "./index.js",
-  "types": "./index.d.ts"
+  "types": "./index.d.ts",
+  "scripts": {
+    "install": "node link-matterbridge-script.js"
+  }
 }
