--- a/package.json
+++ b/package.json
@@ -102,8 +102,8 @@
     "clean": "rimraf tsconfig.tsbuildinfo ./dist",
     "cleanBuild": "npm run clean && npm run build",
     "deepClean": "rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules",
-    "deepCleanRebuild": "npm run deepClean && npm install && npm run build && npm shrinkwrap",
-    "prepublishOnly": "npm run lint && npm run cleanBuild",
+    "deepCleanRebuild": "npm run deepClean && npm install && npm run build",
+    "prepublishOnly": "npm run lint && npm run cleanBuild && npm shrinkwrap",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
     "updateMatter:latest": "npm run deepClean && npm install @project-chip/matter-node.js@latest @project-chip/matter.js@latest && npm install && npm run build",
