--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Echo main version ${{ env.VERSION }}
       run: |
         echo "Extracted version is: $VERSION ${{ env.VERSION }}"
-  
+
     - name: Run Docker Buildx on dev_shelly_alpine
       run: |
         docker buildx build \
@@ -53,6 +53,16 @@ jobs:
         docker manifest inspect luligu/matterbridge:dev_shelly_alpine
       timeout-minutes: 60 
   
+    - name: Run Docker Buildx on dev_shelly_bookworm
+      run: |
+        docker buildx build \
+          --platform linux/arm64 \
+          -f docker/Dockerfile.shelly.bookworm \
+          -t luligu/matterbridge:dev_shelly_bookworm \
+          --push .
+        docker manifest inspect luligu/matterbridge:dev_shelly_bookworm
+      timeout-minutes: 60 
+
     - name: Run Docker Buildx on dev
       run: |
         docker buildx build \
