--- a/docker/Dockerfile.shelly.bookworm
+++ b/docker/Dockerfile.shelly.bookworm
@@ -1,18 +1,26 @@
 FROM node:22-bookworm-slim AS base
 
-WORKDIR /app
+# Install git
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends git && \
+    apt-get clean
 
+# Build Matterbridge
+WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm install --no-audit --no-update-notifier --no-fund && \
-    npm run build && \
-    npm link
+RUN npm ci && npm run build && npm link
 
 # Install Matterbridge plugins
-RUN npm -g install matterbridge-shelly
+WORKDIR /matterbridge-shelly
+RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-shelly.git .
+COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
+RUN npm ci && npm run build && npm link
+# RUN npm -g install matterbridge-shelly
 
 # Copy and execute the entrypoint script
+WORKDIR /app
 COPY ./docker/shellyEntrypoint.sh ./
 RUN chmod +x ./shellyEntrypoint.sh
 ENTRYPOINT ["./shellyEntrypoint.sh"]
