--- a/docker/Dockerfile.shelly.alpine
+++ b/docker/Dockerfile.shelly.alpine
@@ -1,9 +1,8 @@
 FROM node:22-alpine AS base
 
 # Install git
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends git && \
-    apt-get clean
+RUN apk update && \
+    apk add --no-cache git
 
 # Build Matterbridge
 WORKDIR /app
