--- a/docker/Dockerfile.shelly.bullseye
+++ b/docker/Dockerfile.shelly.bullseye
@@ -3,35 +3,30 @@ FROM node:22-bullseye-slim AS base
 # Install git
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends git && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    npm install -g npm@latest && \
-    node -v && \
-    npm -v
+    apt-get clean
+
+RUN npm install -g npm@latest
+RUN node -v
+RUN npm -v
 
 # Build Matterbridge
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-COPY ./docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-COPY ./docker/shellyEntrypoint.sh ./
-RUN chmod +x ./shellyEntrypoint.sh && \
-    npm ci && \
-    npm run build && \
-    npm link
+RUN npm ci && npm run build && npm link
 
 # Build shelly plugin
 WORKDIR /matterbridge-shelly
-RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-shelly.git . && \
-    npm ci && \
-    npm run build  && \
-    npm link
+RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-shelly.git .
+COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
+RUN npm ci && npm run build && npm link
 # RUN npm -g install matterbridge-shelly
 
 # Copy and execute the entrypoint script
 WORKDIR /app
-
+COPY ./docker/shellyEntrypoint.sh ./
+RUN chmod +x ./shellyEntrypoint.sh
 ENTRYPOINT ["./shellyEntrypoint.sh"]
 
 CMD ["matterbridge", "-docker"]
