--- a/docker/Dockerfile.shelly.alpine
+++ b/docker/Dockerfile.shelly.alpine
@@ -1,31 +1,33 @@
 FROM node:22-alpine AS base
 
-# Install git
+# Install git and update npm
 RUN apk update && \
-    apk add --no-cache git
-
-RUN npm install -g npm@latest
-RUN node -v
-RUN npm -v
+    apk add --no-cache git && \
+    npm install -g npm@latest && \
+    node -v && \
+    npm -v
 
 # Build Matterbridge
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run build && npm link
+COPY ./docker/shellyEntrypoint.sh ./
+RUN npm ci && \
+    npm run build && \
+    npm link && \
+    chmod +x ./shellyEntrypoint.sh
 
 # Build shelly plugin
 WORKDIR /matterbridge-shelly
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-shelly.git .
-COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm link
-# RUN npm -g install matterbridge-shelly
+COPY ./docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
+RUN npm ci && \
+    npm run build && \
+    npm link
 
 # Copy and execute the entrypoint script
 WORKDIR /app
-COPY ./docker/shellyEntrypoint.sh ./
-RUN chmod +x ./shellyEntrypoint.sh
 ENTRYPOINT ["./shellyEntrypoint.sh"]
 
 CMD ["matterbridge", "-docker"]
