--- a/docker/Dockerfile.shelly.alpine
+++ b/docker/Dockerfile.shelly.alpine
@@ -26,7 +26,8 @@ RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbrid
 COPY ./docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
 RUN npm ci && \
     npm run build && \
-    npm install -g ./ && \
+    npm pack && \
+    npm install -g matterbridge-shelly-*.tgz && \
     cd / && \
     rm -rf /matterbridge-shelly
 
