--- a/docker/Dockerfile.shelly.alpine
+++ b/docker/Dockerfile.shelly.alpine
@@ -14,6 +14,7 @@ COPY ./src ./src
 COPY ./frontend/build ./frontend/build
 RUN npm ci && \
     npm run build && \
+    npm shrinkwrap && \
     npm pack && \
     npm install -g matterbridge-*.tgz && \
     npm list -g && \
@@ -26,6 +27,7 @@ RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbrid
 COPY ./docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
 RUN npm ci && \
     npm run build && \
+    npm shrinkwrap && \
     npm pack && \
     npm install -g matterbridge-shelly-*.tgz && \
     cd / && \
