--- a/docker/Dockerfile.shelly.bookworm
+++ b/docker/Dockerfile.shelly.bookworm
@@ -1,32 +1,46 @@
 FROM node:22-bookworm-slim AS base
 
-# Install git
+# Install git and update npm
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends git && \
-    apt-get clean
-
-RUN npm install -g npm@latest
-RUN node -v
-RUN npm -v
+    apt-get clean && \
+    npm install -g npm@latest && \
+    node -v && \
+    npm -v
 
 # Build Matterbridge
-WORKDIR /app
+WORKDIR /matterbridge
 COPY ./package.json ./package-lock.json ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run build && npm link
+RUN npm ci && \
+    npm run build && \
+    npm shrinkwrap --omit=dev && \
+    npm pack && \
+    npm install -g matterbridge-*.tgz && \
+    cd / && \
+    rm -rf /matterbridge
 
 # Build shelly plugin
 WORKDIR /matterbridge-shelly
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-shelly.git .
-COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm link
-# RUN npm -g install matterbridge-shelly
+COPY ./docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
+RUN npm ci && \
+    npm run build && \
+    npm shrinkwrap --omit=dev && \
+    npm pack && \
+    npm install -g matterbridge-shelly-*.tgz && \
+    cd / && \
+    rm -rf /matterbridge-shelly
 
 # Copy and execute the entrypoint script
 WORKDIR /app
 COPY ./docker/shellyEntrypoint.sh ./
-RUN chmod +x ./shellyEntrypoint.sh
+RUN chmod +x ./shellyEntrypoint.sh && \
+    apt-get remove --purge -y git && \
+    apt-get autoremove -y && \
+    apt-get clean && \
+    npm list -g && \
+    ls ./
 ENTRYPOINT ["./shellyEntrypoint.sh"]
-
 CMD ["matterbridge", "-docker"]
