--- a/docker/Dockerfile.shelly.bullseye
+++ b/docker/Dockerfile.shelly.bullseye
@@ -16,10 +16,7 @@ COPY ./frontend/build ./frontend/build
 RUN npm ci && \
     npm run build && \
     npm shrinkwrap --omit=dev && \
-    npm pack && \
-    npm install -g matterbridge-*.tgz && \
-    cd / && \
-    rm -rf /matterbridge
+    npm pack
 
 # Build shelly plugin
 WORKDIR /matterbridge-shelly
@@ -28,19 +25,23 @@ COPY ./docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
 RUN npm ci && \
     npm run build && \
     npm shrinkwrap --omit=dev && \
-    npm pack && \
-    npm install -g matterbridge-shelly-*.tgz && \
-    cd / && \
-    rm -rf /matterbridge-shelly
+    npm pack
+
+
+FROM node:22-bullseye-slim AS release
+WORKDIR /app    
+
+COPY --from=base /matterbridge/*.tgz .
+RUN npm install -g npm@latest && npm -g install *.tgz && rm *.tgz
+
+COPY --from=base /matterbridge-shelly/*.tgz .
+RUN npm -g install *.tgz && rm *.tgz
 
 # Copy and execute the entrypoint script
-WORKDIR /app
 COPY ./docker/shellyEntrypoint.sh ./
 RUN chmod +x ./shellyEntrypoint.sh && \
-    apt-get remove --purge -y git && \
-    apt-get autoremove -y && \
-    apt-get clean && \
-    npm list -g && \
-    ls ./
+    node -v && \
+    npm -v && \
+    npm list -g
 ENTRYPOINT ["./shellyEntrypoint.sh"]
 CMD ["matterbridge", "-docker"]
