--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm -v
                   
       - name: Install dependencies
-        run: npm install
+        run: npm ci
     
       - name: Lint the project
         run: npm run lint
