--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.5.7",
+  "version": "1.5.8-dev.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -126,13 +126,13 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest"
   },
   "dependencies": {
-    "@project-chip/matter-node.js": "0.10.3",
-    "@project-chip/matter.js": "0.10.3",
+    "@project-chip/matter-node.js": "^0.10.4",
+    "@project-chip/matter.js": "^0.10.4",
     "archiver": "7.0.1",
     "express": "4.21.0",
     "glob": "11.0.0",
     "https": "1.0.0",
-    "matter-history": "1.1.14",
+    "matter-history": "^1.1.15-dev.1",
     "node-ansi-logger": "3.0.0",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.0"
@@ -154,6 +154,6 @@
     "rimraf": "6.0.1",
     "ts-jest": "29.2.5",
     "typescript": "5.6.2",
-    "typescript-eslint": "8.5.0"
+    "typescript-eslint": "8.6.0"
   }
 }
