--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:22-bullseye-slim AS base
+FROM node:22-bookworm-slim AS base
 
 WORKDIR /app
 RUN apt-get update && \
@@ -69,7 +69,7 @@ RUN npm ci && npm run build && npm shrinkwrap --omit=dev && npm pack
 
 
 
-FROM node:22-bullseye-slim AS release
+FROM node:22-bookworm-slim AS release
 WORKDIR /app
 
 COPY --from=builder /app/*.tgz .
