--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -1,6 +1,7 @@
 FROM node:22-bookworm-slim AS builder
 WORKDIR /app
 COPY ./package.json ./
+COPY ./package-lock.json ./
 COPY ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
