--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -5,19 +5,15 @@ COPY ./package-lock.json ./
 COPY ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run build && npm link
+RUN npm ci && npm run build && npm shrinkwrap --omit=dev && npm pack
 
 
-FROM builder AS release
+FROM node:22-bookworm-slim AS release
 WORKDIR /app
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/frontend/build ./frontend/build
-RUN npm link
-
-# Install Matterbridge plugins
+COPY --from=builder /app/*.tgz .
 RUN npm install -g npm@latest && \
+    npm install -g *.tgz && \
+    rm *.tgz && \
     npm install -g matterbridge-zigbee2mqtt && \
     npm install -g matterbridge-somfy-tahoma && \
     npm install -g matterbridge-shelly && \
