--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.5.8",
+  "version": "1.5.9-dev.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -126,13 +126,13 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest"
   },
   "dependencies": {
-    "@project-chip/matter-node.js": "0.10.5",
-    "@project-chip/matter.js": "0.10.5",
+    "@project-chip/matter-node.js": "0.10.6",
+    "@project-chip/matter.js": "0.10.6",
     "archiver": "7.0.1",
     "express": "4.21.0",
     "glob": "11.0.0",
     "https": "1.0.0",
-    "matter-history": "1.1.15",
+    "matter-history": "^1.1.16-dev.1",
     "node-ansi-logger": "3.0.0",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.0"
