--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -5,25 +5,25 @@ COPY ./package-lock.json ./
 COPY ./tsconfig.json ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run build && npm shrinkwrap --omit=dev && npm pack
+RUN npm ci && npm run build && npm shrinkwrap && npm pack
 
 
 FROM node:22-bookworm-slim AS release
 WORKDIR /app
 COPY --from=builder /app/*.tgz .
 RUN npm install -g npm@latest && \
-    npm install -g *.tgz && \
+    npm install -g --omit=dev *.tgz && \
     rm *.tgz && \
-    npm install -g matterbridge-zigbee2mqtt && \
-    npm install -g matterbridge-somfy-tahoma && \
-    npm install -g matterbridge-shelly && \
-    npm install -g matterbridge-example-accessory-platform && \
-    npm install -g matterbridge-example-dynamic-platform && \
-    npm install -g matterbridge-eve-door && \
-    npm install -g matterbridge-eve-motion && \
-    npm install -g matterbridge-eve-energy && \
-    npm install -g matterbridge-eve-room && \
-    npm install -g matterbridge-eve-weather && \
+    npm install -g --omit=dev matterbridge-zigbee2mqtt && \
+    npm install -g --omit=dev matterbridge-somfy-tahoma && \
+    npm install -g --omit=dev matterbridge-shelly && \
+    npm install -g --omit=dev matterbridge-example-accessory-platform && \
+    npm install -g --omit=dev matterbridge-example-dynamic-platform && \
+    npm install -g --omit=dev matterbridge-eve-door && \
+    npm install -g --omit=dev matterbridge-eve-motion && \
+    npm install -g --omit=dev matterbridge-eve-energy && \
+    npm install -g --omit=dev matterbridge-eve-room && \
+    npm install -g --omit=dev matterbridge-eve-weather && \
     node -v && \
     npm -v && \
     npm list -g
