--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -73,7 +73,7 @@ FROM node:22-bookworm-slim AS release
 WORKDIR /app
 
 COPY --from=builder /app/*.tgz .
-RUN npm install -g npm@latest && npm -g --omit=dev install *.tgz && rm *.tgz
+RUN npm install -g npm@latest && npm install -g --omit=dev *.tgz && rm *.tgz
 
 COPY --from=builder /matterbridge-zigbee2mqtt/*.tgz .
 COPY --from=builder /matterbridge-somfy-tahoma/*.tgz .
