--- a/docker/Dockerfile.dev_shelly.bookworm
+++ b/docker/Dockerfile.dev_shelly.bookworm
@@ -34,10 +34,10 @@ FROM node:22-bookworm-slim AS release
 WORKDIR /app    
 
 COPY --from=base /matterbridge/*.tgz .
-RUN npm install -g npm@latest && npm -g --omit=dev install *.tgz && rm *.tgz
+RUN npm install -g npm@latest && npm install -g --omit=dev *.tgz && rm *.tgz
 
 COPY --from=base /matterbridge-shelly/*.tgz .
-RUN npm -g --omit=dev install *.tgz && rm *.tgz
+RUN npm install -g --omit=dev *.tgz && rm *.tgz
 
 # Copy and execute the entrypoint script
 COPY ./docker/shellyEntrypoint.sh ./
