--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -73,3 +73,13 @@ jobs:
         docker manifest inspect luligu/matterbridge:dev
       timeout-minutes: 60 
 
+    - name: Run Docker Buildx on test
+      run: |
+        docker buildx build \
+          --platform linux/amd64,linux/arm64,linux/arm/v7 \
+          -f docker/Dockerfile.latest \
+          -t luligu/matterbridge:test \
+          --push .
+        docker manifest inspect luligu/matterbridge:test
+      timeout-minutes: 60 
+
