--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -1,19 +1,6 @@
-FROM node:22-bookworm-slim AS builder
-WORKDIR /app
-COPY ./package.json ./
-COPY ./package-lock.json ./
-COPY ./tsconfig.json ./
-COPY ./src ./src
-COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
-
-
-FROM node:22-bookworm-slim AS release
-WORKDIR /app
-COPY --from=builder /app/*.tgz .
+FROM node:22-bookworm-slim
 RUN npm install -g npm@latest && \
-    npm install -g --omit=dev *.tgz && \
-    rm *.tgz && \
+    npm install -g --omit=dev matterbridge && \
     npm install -g --omit=dev matterbridge-zigbee2mqtt && \
     npm install -g --omit=dev matterbridge-somfy-tahoma && \
     npm install -g --omit=dev matterbridge-shelly && \
@@ -28,6 +15,5 @@ RUN npm install -g npm@latest && \
     npm -v && \
     npm list -g
 
-WORKDIR /app
 CMD ["matterbridge", "-docker"]
 
