--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -1,16 +1,16 @@
 FROM node:22-bookworm-slim
 RUN npm install -g npm@latest && \
-    npm install -g --omit=dev matterbridge && \
-    npm install -g --omit=dev matterbridge-zigbee2mqtt && \
-    npm install -g --omit=dev matterbridge-somfy-tahoma && \
-    npm install -g --omit=dev matterbridge-shelly && \
-    npm install -g --omit=dev matterbridge-example-accessory-platform && \
-    npm install -g --omit=dev matterbridge-example-dynamic-platform && \
-    npm install -g --omit=dev matterbridge-eve-door && \
-    npm install -g --omit=dev matterbridge-eve-motion && \
-    npm install -g --omit=dev matterbridge-eve-energy && \
-    npm install -g --omit=dev matterbridge-eve-room && \
-    npm install -g --omit=dev matterbridge-eve-weather && \
+    npm install -g --omit=dev matterbridge \
+    matterbridge-zigbee2mqtt \
+    matterbridge-somfy-tahoma \
+    matterbridge-shelly \
+    matterbridge-example-accessory-platform \
+    matterbridge-example-dynamic-platform \
+    matterbridge-eve-door \
+    matterbridge-eve-motion \
+    matterbridge-eve-energy \
+    matterbridge-eve-room \
+    matterbridge-eve-weather && \
     node -v && \
     npm -v && \
     npm list -g
