--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "updateHistory:loc": "npm run deepClean && npm install ../matter-history && npm install && npm run build",
     "wtf:install": "npm install wtfnode && npm install --save-dev @types/wtfnode",
     "wtf:uninstall": "npm uninstall wtfnode @types/wtfnode",
-    "install:dependencies": "npm install @project-chip/matter-node.js express https matter-history node-ansi-logger node-persist-manager ws && npm install --save-dev rimraf",
+    "install:dependencies": "npm install @project-chip/matter-node.js express https archiver glob node-ansi-logger node-persist-manager ws && npm install --save-dev rimraf",
     "install:typescript": "npm install --save-dev @types/express @types/node @types/ws typescript && npm run build",
     "install:eslint": "npm install --save-dev eslint @eslint/js @types/eslint__js typescript-eslint",
     "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier",
@@ -128,7 +128,6 @@
     "express": "4.21.1",
     "glob": "11.0.0",
     "https": "1.0.0",
-    "matter-history": "^1.1.17-dev.2",
     "node-ansi-logger": "3.0.0",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.0"
