--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Clean cache
-        run: |
-          npm cache clean --force
-          npm install -g matterbridge-example-accessory-platform --force
-          npm install -g matterbridge-example-dynamic-platform --force
-          npm install -g matterbridge-eve-door --force
-          npm install -g matterbridge-eve-motion --force
+        run: npm cache clean --force
 
       - name: Install latest npm
         run: npm install -g npm@latest
