--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -20,12 +20,12 @@ RUN npm ci && npm run build && npm pkg delete devDependencies && npm pkg delete 
 WORKDIR /matterbridge-zigbee2mqtt
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-zigbee2mqtt.git .
 # COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-somfy-tahoma
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-somfy-tahoma.git .
 # COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-shelly
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-shelly.git .
@@ -35,12 +35,12 @@ RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pa
 WORKDIR /matterbridge-example-accessory-platform
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-example-accessory-platform.git .
 # COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-example-dynamic-platform
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-example-dynamic-platform.git .
 # COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-door
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-door.git .
@@ -50,7 +50,7 @@ RUN npm ci && npm run build && npm shrinkwrap && npm pack
 WORKDIR /matterbridge-eve-motion
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-motion.git .
 # COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-energy
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-energy.git .
@@ -60,12 +60,12 @@ RUN npm ci && npm run build && npm shrinkwrap && npm pack
 WORKDIR /matterbridge-eve-room
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-room.git .
 # COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pack
 
 WORKDIR /matterbridge-eve-weather
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-eve-weather.git .
 # COPY docker/link-matterbridge-docker-script.js ./link-matterbridge-script.js
-RUN npm ci && npm run build && npm shrinkwrap && npm pack
+RUN npm ci && npm link matterbridge && npm run build && npm shrinkwrap && npm pack
 
 
 
