--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.6.0-dev.6",
+  "version": "1.6.0-dev.7",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -99,8 +99,8 @@
     "cleanBuild": "npm run clean && npm run build",
     "deepClean": "npx rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules",
     "deepCleanBuild": "npm run deepClean && npm install && npm run build && npm link",
-    "prepublishOnly": "npm shrinkwrap",
-    "npmPack": "npm run cleanBuild && npm shrinkwrap && npm pack && npm run deepCleanBuild",
+    "prepublishOnly": "npm pkg delete devDependencies && npm pkg delete scripts && npm install --omit=dev && npm shrinkwrap",
+    "npmPack": "npm run cleanBuild && copy package.json package.log && npm pkg delete devDependencies && npm pkg delete scripts && npm install --omit=dev && npm shrinkwrap && npm pack && copy package.log package.json && npm run deepCleanBuild",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm install && npm run cleanBuild",
     "updateMatter:latest": "npm run deepClean && npm install @project-chip/matter-node.js@latest @project-chip/matter.js@latest && npm install && npm run build",
@@ -142,7 +142,6 @@
     "eslint-plugin-prettier": "5.2.1",
     "jest": "29.7.0",
     "prettier": "3.3.3",
-    "rimraf": "^6.0.1",
     "ts-jest": "29.2.5",
     "typescript": "5.6.3",
     "typescript-eslint": "8.8.1"
